--- a/scraping/synchronous.html
+++ b/scraping/synchronous.html
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="../about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="../about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="../about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="../03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../deep-learning/hardware.html"><strong aria-hidden="true">4.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../deep-learning/preprocessing.html"><strong aria-hidden="true">4.2.</strong> Preprocessing</a></li><li class="chapter-item expanded "><a href="../deep-learning/batch_inference.html"><strong aria-hidden="true">4.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="../deep-learning/bert-server.html"><strong aria-hidden="true">4.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="../deep-learning/conclusion.html"><strong aria-hidden="true">4.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Rust vs Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-polars/polars.html"><strong aria-hidden="true">5.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="../pandas-polars/020-reading.html"><strong aria-hidden="true">5.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-polars/021-apply.html"><strong aria-hidden="true">5.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="../pandas-polars/22-merging.html"><strong aria-hidden="true">5.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-polars/23-groupby.html"><strong aria-hidden="true">5.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas vs Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-rust/010-reading.html"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="../pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="../pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust vs Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../scraping/synchronous.html" class="active"><strong aria-hidden="true">7.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="../scraping/asynchronous.html"><strong aria-hidden="true">7.2.</strong> Asynchronous</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="../about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="../about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="../about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="../03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../deep-learning/hardware.html"><strong aria-hidden="true">4.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="../deep-learning/preprocessing.html"><strong aria-hidden="true">4.2.</strong> Preprocessing</a></li><li class="chapter-item expanded "><a href="../deep-learning/batch_inference.html"><strong aria-hidden="true">4.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="../deep-learning/bert-server.html"><strong aria-hidden="true">4.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="../deep-learning/conclusion.html"><strong aria-hidden="true">4.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Rust v Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-polars/polars.html"><strong aria-hidden="true">5.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="../pandas-polars/020-reading.html"><strong aria-hidden="true">5.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-polars/021-apply.html"><strong aria-hidden="true">5.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="../pandas-polars/22-merging.html"><strong aria-hidden="true">5.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-polars/23-groupby.html"><strong aria-hidden="true">5.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas v Rust (#1 on Google)</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../pandas-rust/010-reading.html"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="../pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="../pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="../pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="../pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="../pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="../00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust v Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../scraping/synchronous.html" class="active"><strong aria-hidden="true">7.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="../scraping/asynchronous.html"><strong aria-hidden="true">7.2.</strong> Asynchronous</a></li></ol></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -144,36 +144,74 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="synchronous"><a class="header" href="#synchronous">Synchronous</a></h1>
-<h3 id="python"><a class="header" href="#python">Python</a></h3>
-<p>In python, the most common way to handle errors in code would be with an if-statement like so:</p>
-<pre><code class="language-python">response = requests.get(URL)
-if response.status_code == 200:
-    content = response.content
+                        <h3 id="synchronous-python-code"><a class="header" href="#synchronous-python-code">Synchronous Python code</a></h3>
+<pre><code class="language-python">import requests
+import bs4 as bs
+import csv
+URL = &quot;http://books.toscrape.com/catalogue/page-%d.html&quot;
 
-    soup = bs.BeautifulSoup(content, 'lxml')
-    articles = soup.find_all('article')
-    if articles:
-        ...
+with open('./test_python.csv', 'w') as csvfile:
+    spamwriter = csv.writer(csvfile, delimiter=',')
+    for i in range(1, 50):
+        response = requests.get(URL % i)
+        if response.status_code == 200:
+            content = response.content
+            soup = bs.BeautifulSoup(content, 'lxml')
+            articles = soup.find_all('article')
+
+            for article in articles:
+                information = []
+                information.append(article.find(
+                    'p', class_='price_color').text)
+                information.append(article.find('h3').find('a').get('title'))
+                spamwriter.writerow(information)
 </code></pre>
-<p>In itself, handling edge cases with  <code>if</code>  is not so bad and pretty natural. But, it has some drawbacks:</p>
-<ul>
-<li>It makes the code harder to read as it is difficult to dissociate business logic and error handling.</li>
-<li>if-statements are most of the time added in retroaction of a bug, which makes coding slower and not fun.</li>
-<li>if-statements error handling logic might vary between packages, which makes coding very tedious.</li>
-</ul>
-<h3 id="rust"><a class="header" href="#rust">Rust</a></h3>
-<p>In Rust, functions return either a success or an error, and, you have to deal with each case before compiling. This makes the code way more robust against errors at runtimes. In practice, the code might look like this:</p>
-<pre><code class="language-rust noplaypen">let name = match node.find(Name(&quot;h3&quot;)).next() {
-    Some(h3) =&gt; h3.text(),
-    None =&gt; &quot;&quot;.to_string(),
-};
-</code></pre>
-<p>Rust also has other ways to handle Success / Errors Result, such as “?” à la Typescript:</p>
-<pre><code class="language-rust noplaypen">let response = reqwest::get(&amp;url).await?.text().await?;
-</code></pre>
-<p>The drawbacks are that developing in Rust is slower as you have to deal with every edge case during development.</p>
-<p>Sometimes, it might even be tricky to understand which edge cases you’re trying to deal with. To be noted, that you HAVE to deal with every edge case in Rust otherwise, Rust will not compile. This is how serious Rust is about error handling.</p>
+<p>‌</p>
+<h3 id="synchronous-rust-code"><a class="header" href="#synchronous-rust-code">Synchronous Rust code:</a></h3>
+<pre><pre class="playground"><code class="language-rust noplaygen edition2018">use csv::Writer;
+use select::document::Document;
+use select::predicate::{Attr, Class, Name};
+use std::fs::OpenOptions;
+
+async fn test(i: &amp;i32) -&gt; Result&lt;(), Box&lt;dyn std::error::Error + Send + Sync&gt;&gt; {
+    let url = format!(&quot;http://books.toscrape.com/catalogue/page-{}.html&quot;, i);
+    let response = reqwest::get(&amp;url).await?.text().await?;
+    let file = OpenOptions::new()
+        .write(true)
+        .create(true)
+        .append(true)
+        .open(&quot;test2.csv&quot;)
+        .unwrap();
+    let mut wtr = Writer::from_writer(file);
+
+    let document = Document::from(response.as_str());
+
+    for node in document.find(Name(&quot;article&quot;)) {
+        let name = match node.find(Name(&quot;h3&quot;)).next() {
+            Some(h3) =&gt; h3.find(Name(&quot;a&quot;)).next().unwrap().text(),
+            None =&gt; &quot;&quot;.to_string(),
+        };
+        let price = node
+            .find(Attr(&quot;class&quot;, &quot;price_color&quot;))
+            .next()
+            .unwrap()
+            .text();
+
+        // println!(&quot;{:#?} &quot;, url);
+        wtr.write_record(&amp;[&amp;url, &amp;price, &amp;name]).unwrap();
+    }
+
+    Ok(())
+}
+
+#[tokio::main]
+async fn main() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {
+    for i in 1..50 {
+        test(&amp;i).await.unwrap();
+    }
+    Ok(())
+}
+</code></pre></pre>
 
                     </main>
 
