--- a/pandas-polars/020-reading.html
+++ b/pandas-polars/020-reading.html
@@ -222,7 +222,7 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', 'G-F58YNE6LHC', 'auto');
+                ga('create', '284355753', 'auto');
                 ga('send', 'pageview');
             }
         </script>
