--- a/about-me/work.html
+++ b/about-me/work.html
@@ -202,7 +202,7 @@
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', '284355753', 'auto');
+                ga('create', 'G-K1KMR3DSH9', 'auto');
                 ga('send', 'pageview');
             }
         </script>
