--- a/deep-learning/preprocessing.html
+++ b/deep-learning/preprocessing.html
@@ -309,7 +309,7 @@ fn main() -&gt; std::result::Result&lt;(), OrtError&gt; {
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', '284355753', 'auto');
+                ga('create', 'G-K1KMR3DSH9', 'auto');
                 ga('send', 'pageview');
             }
         </script>
