--- a/pandas-rust/013-mutation.html
+++ b/pandas-rust/013-mutation.html
@@ -218,7 +218,7 @@ df.to_csv(&quot;python_output_map.csv&quot;)
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
                 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-                ga('create', '284355753', 'auto');
+                ga('create', 'G-K1KMR3DSH9', 'auto');
                 ga('send', 'pageview');
             }
         </script>
