--- a/print.html
+++ b/print.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="about-me.html">About Me</a></li><li class="chapter-item expanded "><a href="about-me/work.html"><strong aria-hidden="true">1.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="about-me/education.html"><strong aria-hidden="true">2.</strong> Education</a></li><li class="chapter-item expanded "><a href="about-me/skills.html"><strong aria-hidden="true">3.</strong> Skills</a></li><li class="chapter-item expanded affix "><li class="part-title">Latest Posts</li><li class="chapter-item expanded "><a href="03-deep_learning_in_rust.html"><strong aria-hidden="true">4.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="deep-learning/hardware.html"><strong aria-hidden="true">4.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="deep-learning/preprocessing.html"><strong aria-hidden="true">4.2.</strong> Preprocessing</a></li><li class="chapter-item expanded "><a href="deep-learning/batch_inference.html"><strong aria-hidden="true">4.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="deep-learning/bert-server.html"><strong aria-hidden="true">4.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="deep-learning/conclusion.html"><strong aria-hidden="true">4.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="02-polars-vs-rust.html"><strong aria-hidden="true">5.</strong> 04.2020 - Rust v Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pandas-polars/polars.html"><strong aria-hidden="true">5.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="pandas-polars/020-reading.html"><strong aria-hidden="true">5.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="pandas-polars/021-apply.html"><strong aria-hidden="true">5.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="pandas-polars/22-merging.html"><strong aria-hidden="true">5.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="pandas-polars/23-groupby.html"><strong aria-hidden="true">5.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="pandas-polars/24-conculsion.html"><strong aria-hidden="true">5.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="01-pandas-vs-rust.html"><strong aria-hidden="true">6.</strong> 03.2020 - Pandas v Rust (#1 on Google)</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pandas-rust/010-reading.html"><strong aria-hidden="true">6.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="pandas-rust/011-filtering.html"><strong aria-hidden="true">6.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="pandas-rust/012-groupby.html"><strong aria-hidden="true">6.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="pandas-rust/013-mutation.html"><strong aria-hidden="true">6.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="pandas-rust/014-merging.html"><strong aria-hidden="true">6.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="pandas-rust/15-conclusion.html"><strong aria-hidden="true">6.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="00-scraping.html"><strong aria-hidden="true">7.</strong> 02.2020 - Scraping Rust v Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="scraping/synchronous.html"><strong aria-hidden="true">7.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="scraping/asynchronous.html"><strong aria-hidden="true">7.2.</strong> Asynchronous</a></li></ol></li></ol>            </div>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="about-me.html"><strong aria-hidden="true">1.</strong> About Me</a></li><li class="chapter-item expanded "><a href="03-deep_learning_in_rust.html"><strong aria-hidden="true">2.</strong> 07.2020 - Deep Learning in Rust</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="deep-learning/hardware.html"><strong aria-hidden="true">2.1.</strong> Hardware</a></li><li class="chapter-item expanded "><a href="deep-learning/preprocessing.html"><strong aria-hidden="true">2.2.</strong> Preprocessing</a></li><li class="chapter-item expanded "><a href="deep-learning/batch_inference.html"><strong aria-hidden="true">2.3.</strong> Batch Inference</a></li><li class="chapter-item expanded "><a href="deep-learning/bert-server.html"><strong aria-hidden="true">2.4.</strong> Bert Server</a></li><li class="chapter-item expanded "><a href="deep-learning/conclusion.html"><strong aria-hidden="true">2.5.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="02-polars-vs-rust.html"><strong aria-hidden="true">3.</strong> 04.2020 - Rust v Polars</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pandas-polars/polars.html"><strong aria-hidden="true">3.1.</strong> Polars</a></li><li class="chapter-item expanded "><a href="pandas-polars/020-reading.html"><strong aria-hidden="true">3.2.</strong> Reading</a></li><li class="chapter-item expanded "><a href="pandas-polars/021-apply.html"><strong aria-hidden="true">3.3.</strong> Apply</a></li><li class="chapter-item expanded "><a href="pandas-polars/22-merging.html"><strong aria-hidden="true">3.4.</strong> Merging</a></li><li class="chapter-item expanded "><a href="pandas-polars/23-groupby.html"><strong aria-hidden="true">3.5.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="pandas-polars/24-conculsion.html"><strong aria-hidden="true">3.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="01-pandas-vs-rust.html"><strong aria-hidden="true">4.</strong> 03.2020 - Pandas v Rust (#1 on Google)</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="pandas-rust/010-reading.html"><strong aria-hidden="true">4.1.</strong> Reading</a></li><li class="chapter-item expanded "><a href="pandas-rust/011-filtering.html"><strong aria-hidden="true">4.2.</strong> Filtering</a></li><li class="chapter-item expanded "><a href="pandas-rust/012-groupby.html"><strong aria-hidden="true">4.3.</strong> Groupby</a></li><li class="chapter-item expanded "><a href="pandas-rust/013-mutation.html"><strong aria-hidden="true">4.4.</strong> Mutation</a></li><li class="chapter-item expanded "><a href="pandas-rust/014-merging.html"><strong aria-hidden="true">4.5.</strong> Merging</a></li><li class="chapter-item expanded "><a href="pandas-rust/15-conclusion.html"><strong aria-hidden="true">4.6.</strong> Conclusion</a></li></ol></li><li class="chapter-item expanded "><a href="00-scraping.html"><strong aria-hidden="true">5.</strong> 02.2020 - Scraping Rust v Python</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="scraping/synchronous.html"><strong aria-hidden="true">5.1.</strong> Synchronous</a></li><li class="chapter-item expanded "><a href="scraping/asynchronous.html"><strong aria-hidden="true">5.2.</strong> Asynchronous</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Bio</li><li class="chapter-item expanded "><a href="about-me/work.html"><strong aria-hidden="true">6.</strong> Work Experience</a></li><li class="chapter-item expanded "><a href="about-me/education.html"><strong aria-hidden="true">7.</strong> Education</a></li><li class="chapter-item expanded "><a href="about-me/skills.html"><strong aria-hidden="true">8.</strong> Skills</a></li></ol>            </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
 
@@ -153,44 +153,6 @@
 <a href="https://github.com/haixuanTao"><img src="https://img.shields.io/badge/HaixuanTao-fff?logo=github&amp;logoColor=black" alt="Github" /></a></p>
 <p>Data Engineer belivieving in Rust for ML/IA engineering.</p>
 <p>Searching for a great Rust ML/IA Engineer? Get in touch 📬 <a href="mailto:tao.xavier@outlook.com">tao.xavier@outlook.com</a></p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="work-experience"><a class="header" href="#work-experience">Work Experience</a></h1>
-<h4 id="data-engineer--central-bank-of-francediv-classrightdec-2020---nowdiv"><a class="header" href="#data-engineer--central-bank-of-francediv-classrightdec-2020---nowdiv">Data Engineer @ Central Bank of France<div class="right">Dec 2020 - Now</div></a></h4>
-<p>Automating checks of mortgage loans contracts using NER, NLP, and CV.</p>
-<blockquote>
-<p><a href="https://events.linuxfoundation.org/lf-ai-data-day-eu-virtual/program/schedule/">🎤 Speaker at the Linux Foundation AI &amp; Data Days Europe on: Why ONNX Runtime Matters for Deploying AI in Institution.</a></p>
-</blockquote>
-<h4 id="researcher--insee-national-institute-for-stats-and-econ-studiesdiv-classrightsep-2020---dec-2020div"><a class="header" href="#researcher--insee-national-institute-for-stats-and-econ-studiesdiv-classrightsep-2020---dec-2020div">Researcher @ INSEE: National Institute for Stats and Econ Studies<div class="right">Sep 2020 - Dec 2020</div></a></h4>
-<p>Measured population on a 100m grid of France at every hour based on mobile phone data.</p>
-<blockquote>
-<p><a href="https://coms.events/NTTS2021/data/abstracts/en/abstract_0108.html">📃 Published a paper at NTTS 2021 on a novel approach for estimating population using Mobile Phone Data.</a></p>
-</blockquote>
-<h4 id="data-scientist-intern--boston-consulting-groupdiv-classrightjuly-2019---dec-2019div"><a class="header" href="#data-scientist-intern--boston-consulting-groupdiv-classrightjuly-2019---dec-2019div">Data Scientist Intern @ Boston Consulting Group<div class="right">July 2019 - Dec 2019</div></a></h4>
-<p>Helped a large fashion retailer build a stocks optimizer for more than 100+ different markets.</p>
-<h4 id="data-scientist-intern--bnp-paribasdiv-classrightjuly-2017---july-2018div"><a class="header" href="#data-scientist-intern--bnp-paribasdiv-classrightjuly-2017---july-2018div">Data Scientist Intern @ BNP Paribas<div class="right">July 2017 - July 2018</div></a></h4>
-<p>Developed a corporate credit scoring and pricing algorithm leading to the lending of 100 millions € of unsecured loan for SME in the UK. </p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="education"><a class="header" href="#education">Education</a></h1>
-<h3 id="ecole-centrale-paris-centralesupelec-engineering-degree-div-classright2015---2019div"><a class="header" href="#ecole-centrale-paris-centralesupelec-engineering-degree-div-classright2015---2019div">Ecole Centrale Paris (CentraleSupelec), Engineering Degree <div class="right">2015 - 2019</div></a></h3>
-<p>Majored in Applied Mathematics</p>
-<p>Awards:</p>
-<ul>
-<li>2500 euros Innovation award for building an European Statistics search engine</li>
-<li>2nd Place at BCG Gamma Data Challenge on Preventive Health Care Measure Optimization</li>
-<li>1st Place with a 2400€ award at Schlumberger Hackathon on deep learning applied to Lithology</li>
-</ul>
-<h3 id="essec-business-school-msc-data-science--business-analyticsdiv-classright2018---2019div"><a class="header" href="#essec-business-school-msc-data-science--business-analyticsdiv-classright2018---2019div">ESSEC Business School, Msc Data Science &amp; Business Analytics<div class="right">2018 - 2019</div></a></h3>
-<p>Double Major in Data Science and Business Strategy</p>
-<p>Awards:</p>
-<ul>
-<li><a href="https://www.youtube.com/watch?v=M7GXZ3cjviM">[video] 1st Place at I-COM Data Science Hackathon - Warner Bros. Challenge</a>.</li>
-<li>2nd Place at Oliver Wyman Data Challenge on Paris Public Parking Pricing </li>
-</ul>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="skills"><a class="header" href="#skills">Skills</a></h1>
-<h3 id="languages"><a class="header" href="#languages">Languages</a></h3>
-<p>French, English, Mandarin (Basic reading and writing)</p>
-<h3 id="coding-languages"><a class="header" href="#coding-languages">Coding Languages</a></h3>
-<p>Rust, Python, C/C++, Javascript, Typescript, Git, Docker, Kubernetes</p>
-<h3 id="sports"><a class="header" href="#sports">Sports</a></h3>
-<p>Sailing ⛵ and Kitesurfing 🏄</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="deep-learning-in-rust"><a class="header" href="#deep-learning-in-rust">Deep Learning in Rust</a></h1>
 <p><a href="https://github.com/haixuantao/onnxruntime-rs"><img alt="github" src="https://img.shields.io/badge/onnxruntime_rs-fff?labelColor=000&logo=github" height="20"></a>
 <a href="https://github.com/haixuantao/onnxruntime-rs/actions?query=branch%3Amaster"><img alt="build status" src="https://img.shields.io/github/workflow/status/haixuantao/onnxruntime-rs/Rust/master?" height="20"></a>
@@ -1323,6 +1285,44 @@ async fn main() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {
 }
 </code></pre>
 <p>‌</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="work-experience"><a class="header" href="#work-experience">Work Experience</a></h1>
+<h4 id="data-engineer--central-bank-of-francediv-classrightdec-2020---nowdiv"><a class="header" href="#data-engineer--central-bank-of-francediv-classrightdec-2020---nowdiv">Data Engineer @ Central Bank of France<div class="right">Dec 2020 - Now</div></a></h4>
+<p>Automating checks of mortgage loans contracts using NER, NLP, and CV.</p>
+<blockquote>
+<p><a href="https://events.linuxfoundation.org/lf-ai-data-day-eu-virtual/program/schedule/">🎤 Speaker at the Linux Foundation AI &amp; Data Days Europe on: Why ONNX Runtime Matters for Deploying AI in Institution.</a></p>
+</blockquote>
+<h4 id="researcher--insee-national-institute-for-stats-and-econ-studiesdiv-classrightsep-2020---dec-2020div"><a class="header" href="#researcher--insee-national-institute-for-stats-and-econ-studiesdiv-classrightsep-2020---dec-2020div">Researcher @ INSEE: National Institute for Stats and Econ Studies<div class="right">Sep 2020 - Dec 2020</div></a></h4>
+<p>Measured population on a 100m grid of France at every hour based on mobile phone data.</p>
+<blockquote>
+<p><a href="https://coms.events/NTTS2021/data/abstracts/en/abstract_0108.html">📃 Published a paper at NTTS 2021 on a novel approach for estimating population using Mobile Phone Data.</a></p>
+</blockquote>
+<h4 id="data-scientist-intern--boston-consulting-groupdiv-classrightjuly-2019---dec-2019div"><a class="header" href="#data-scientist-intern--boston-consulting-groupdiv-classrightjuly-2019---dec-2019div">Data Scientist Intern @ Boston Consulting Group<div class="right">July 2019 - Dec 2019</div></a></h4>
+<p>Helped a large fashion retailer build a stocks optimizer for more than 100+ different markets.</p>
+<h4 id="data-scientist-intern--bnp-paribasdiv-classrightjuly-2017---july-2018div"><a class="header" href="#data-scientist-intern--bnp-paribasdiv-classrightjuly-2017---july-2018div">Data Scientist Intern @ BNP Paribas<div class="right">July 2017 - July 2018</div></a></h4>
+<p>Developed a corporate credit scoring and pricing algorithm leading to the lending of 100 millions € of unsecured loan for SME in the UK. </p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="education"><a class="header" href="#education">Education</a></h1>
+<h3 id="ecole-centrale-paris-centralesupelec-engineering-degree-div-classright2015---2019div"><a class="header" href="#ecole-centrale-paris-centralesupelec-engineering-degree-div-classright2015---2019div">Ecole Centrale Paris (CentraleSupelec), Engineering Degree <div class="right">2015 - 2019</div></a></h3>
+<p>Majored in Applied Mathematics</p>
+<p>Awards:</p>
+<ul>
+<li>2500 euros Innovation award for building an European Statistics search engine</li>
+<li>2nd Place at BCG Gamma Data Challenge on Preventive Health Care Measure Optimization</li>
+<li>1st Place with a 2400€ award at Schlumberger Hackathon on deep learning applied to Lithology</li>
+</ul>
+<h3 id="essec-business-school-msc-data-science--business-analyticsdiv-classright2018---2019div"><a class="header" href="#essec-business-school-msc-data-science--business-analyticsdiv-classright2018---2019div">ESSEC Business School, Msc Data Science &amp; Business Analytics<div class="right">2018 - 2019</div></a></h3>
+<p>Double Major in Data Science and Business Strategy</p>
+<p>Awards:</p>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=M7GXZ3cjviM">[video] 1st Place at I-COM Data Science Hackathon - Warner Bros. Challenge</a>.</li>
+<li>2nd Place at Oliver Wyman Data Challenge on Paris Public Parking Pricing </li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="skills"><a class="header" href="#skills">Skills</a></h1>
+<h3 id="languages"><a class="header" href="#languages">Languages</a></h3>
+<p>French, English, Mandarin (Basic reading and writing)</p>
+<h3 id="coding-languages"><a class="header" href="#coding-languages">Coding Languages</a></h3>
+<p>Rust, Python, C/C++, Javascript, Typescript, Git, Docker, Kubernetes</p>
+<h3 id="sports"><a class="header" href="#sports">Sports</a></h3>
+<p>Sailing ⛵ and Kitesurfing 🏄</p>
 
                     </main>
 
